# schlange

./: .gitignore  german_sentence_analysis.py  german_vocab_quiz.py  libnouns.py  translate.py
chatgpt/: german_rules.py  german_sentence_analysis.py  print_rules.py
chatgpt/pronouns_cli_v2/: README.md
chatgpt/pronouns_cli_v2/data/: nouns.json  pronouns.json
chatgpt/pronouns_cli_v2/src/: library.py  morphology.py  pronouns_freeform.py  pronouns_quiz.py  utils.py
claude/: german_tts_generator.py  pyproject.toml
claude/data/: sentences.json
claude/wordlists/: README.md  build_wordlist.py  goethe_a1-b1.tsv
